react web: github actions changed from matrix into node8

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -6,13 +6,16 @@ on:
     branches:
     - develop
     paths:
-    - './src/backend/services/order.api/**'
+    - 'src/backend/services/order.api/**'
+    - '.github/workflows/basket-api.yml'
 
   pull_request:
     branches:
     - develop
     paths:
-    - './src/backend/services/basket.api/**'
+    - 'src/backend/services/basket.api/**'
+    - '.github/workflows/basket-api.yml'
+  
     types: [opened, synchronize, reopened]
 
 jobs:
