--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -6,11 +6,13 @@ on:
       - develop
     paths:
       - 'src/backend/services/order.api/**'
+      - '.github/workflows/identity-api.yml'
   pull_request:
     branches:
       - develop
     paths:
       - 'src/backend/services/identity.api/**'
+      - '.github/workflows/identity-api.yml'
 
 jobs:
   build-and-test:
