--- a/.github/workflows/web-app.yml
+++ b/.github/workflows/web-app.yml
@@ -6,28 +6,27 @@ on:
       - develop
     paths:
       - 'src/backend/web/web.client/web-app/**'
+      - '.github/workflows/web-app.yml'
   pull_request:
     branches:
       - develop
     paths:
       - 'src/backend/web/web.client/web-app/**'
+      - '.github/workflows/web-app.yml'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [8.x, 10.x, 12.x]
 
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: '0'
 
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '8.x'
     
     - name: Install Packages
       run: npm install
