--- a/src/backend/gateway/nginx.conf
+++ b/src/backend/gateway/nginx.conf
@@ -1,16 +1,55 @@
-server {
-  listen 3030;
-  listen [::]:3030;
+upstream menu-api {
+  server menu-api;
+}
 
-  location /dashboard/ {
-      resolver 8.8.8.8;
-      rewrite ^/dashboard/(.*) /$1 break;
-      proxy_pass http://dashboard;
+upstream identity-api {
+  server identity-api;
+}
+
+upstream basket-api {
+  server basket-api;
+}
+
+upstream order-api {
+  server order-api;
+}
+
+upstream dashboard-app {
+  server dashboard-app;
+}
+
+server {
+  listen 8080;
+  listen [::]:8080;
+
+  location /dashboard {
+    rewrite ^/dashboard/(.*) /$1 break;
+    proxy_pass http://dashboard-app;
   }
 
-  location /menu/ {
-    resolver 8.8.8.8;
-    rewrite ^/dashboard/(.*) /$1 break;
+  location /menu {
+    rewrite ^/menu/(.*) /$1 break;
     proxy_pass http://menu-api;
+  }
+
+  location /identity {
+    # rewrite ^/identity/(.*) /$1 break;
+    proxy_pass http://identity-api;
+    # proxy_set_header    X-Forwarded-Prefix /identity;
+    proxy_set_header    X-Forwarded-Proto $scheme;
+    proxy_set_header    X-Forwarded-For $remote_addr;
+    proxy_set_header    X-Real-IP $remote_addr;
+    proxy_set_header    X-Real-Port $server_port;
+    proxy_set_header    Host $host:8080;
+  }
+
+  location /basket {
+    rewrite ^/basket/(.*) /$1 break;
+    proxy_pass http://basket-api;
+  }
+
+  location /order {
+    rewrite ^/order/(.*) /$1 break;
+    proxy_pass http://order-api;
   }
 }
