--- a/src/backend/web/web.admin/dashboard/Dockerfile
+++ b/src/backend/web/web.admin/dashboard/Dockerfile
@@ -2,7 +2,7 @@
 # Stage 1
 FROM node:8.11.2-alpine as builder
 WORKDIR /usr/src/app
-COPY package*.json yarn.lock ./
+COPY package.json ./
 RUN yarn
 COPY . ./
 RUN yarn build --prod --base-href=/dashboard/ --deploy-url=/dashboard/
