--- a/src/backend/gateway/nginx.conf
+++ b/src/backend/gateway/nginx.conf
@@ -1,30 +1,45 @@
 upstream menu-api {
-  server menu-api;
+  server menu-api:80;
 }
 
 upstream identity-api {
-  server identity-api;
+  server identity-api:80;
 }
 
 upstream basket-api {
-  server basket-api;
+  server basket-api:5200;
 }
 
 upstream order-api {
-  server order-api;
+  server order-api:8090;
 }
 
 upstream dashboard-app {
-  server dashboard-app;
+  server dashboard-app:80;
+}
+
+upstream web-app {
+  server web-app:80;
 }
 
 server {
   listen 8080;
   listen [::]:8080;
 
+  proxy_set_header    X-Forwarded-Proto $scheme;
+  proxy_set_header    X-Forwarded-For $remote_addr;
+  proxy_set_header    X-Real-IP $remote_addr;
+  proxy_set_header    X-Real-Port $server_port;
+  proxy_set_header    Host $host:8080;
+
   location /dashboard {
     rewrite ^/dashboard/(.*) /$1 break;
     proxy_pass http://dashboard-app;
+  }
+
+  location /web {
+    rewrite ^/web/(.*) /$1 break;
+    proxy_pass http://web-app;
   }
 
   location /menu {
@@ -33,23 +48,23 @@ server {
   }
 
   location /identity {
-    # rewrite ^/identity/(.*) /$1 break;
-    proxy_pass http://identity-api;
-    # proxy_set_header    X-Forwarded-Prefix /identity;
-    proxy_set_header    X-Forwarded-Proto $scheme;
-    proxy_set_header    X-Forwarded-For $remote_addr;
-    proxy_set_header    X-Real-IP $remote_addr;
-    proxy_set_header    X-Real-Port $server_port;
-    proxy_set_header    Host $host:8080;
+    proxy_pass          http://identity-api;
   }
 
   location /basket {
-    rewrite ^/basket/(.*) /$1 break;
     proxy_pass http://basket-api;
   }
 
   location /order {
     rewrite ^/order/(.*) /$1 break;
+
+    proxy_set_header    X-Forwarded-Proto $scheme;
+    proxy_set_header    X-Forwarded-For $remote_addr;
+    proxy_set_header    X-Real-IP $remote_addr;
+    proxy_set_header    X-Real-Port $server_port;
+    proxy_set_header    X-Forwarded-Host $host:8080;
+    proxy_set_header    X-Forwarded-Prefix /order;
+
     proxy_pass http://order-api;
   }
 }
