--- a/src/backend/k8s/ingress.yml
+++ b/src/backend/k8s/ingress.yml
@@ -9,7 +9,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^/dashboard/(.*) /$1 break;
-      proxy_set_header    X-Forwarded-Prefix /order;
+      proxy_set_header    X-Forwarded-Prefix /$1;
       
 spec:
   rules:
