Zuul gateway removed

--- a/src/backend/services/order.api/build.gradle
+++ b/src/backend/services/order.api/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     compile('io.springfox:springfox-swagger2:2.9.2')
     compile('io.springfox:springfox-swagger-ui:2.9.2')
 
+
+    compile('org.projectlombok:lombok:1.18.12')
+
     compile('org.modelmapper:modelmapper:2.3.0')
     compile('org.hibernate:hibernate-core:5.4.2.Final')
 
