Identity Server 4 updated to version 4.0.4

--- a/src/backend/gateway/nginx.conf
+++ b/src/backend/gateway/nginx.conf
@@ -18,9 +18,9 @@ upstream dashboard-app {
   server dashboard-app:80;
 }
 
-upstream web-app {
-  server web-app:80;
-}
+# upstream web-app {
+#   server web-app:80;
+# }
 
 server {
   listen 8080;
@@ -37,10 +37,10 @@ server {
     proxy_pass http://dashboard-app;
   }
 
-  location /web {
-    rewrite ^/web/(.*) /$1 break;
-    proxy_pass http://web-app;
-  }
+  # location /web {
+  #   rewrite ^/web/(.*) /$1 break;
+  #   proxy_pass http://web-app;
+  # }
 
   location /menu {
     rewrite ^/menu/(.*) /$1 break;
