--- a/src/backend/web/web.client/web-app/package.json
+++ b/src/backend/web/web.client/web-app/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "oidc-client": "^1.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
