Dashboard App Angular migration into version 11 (#69)

--- a/src/backend/web/web.admin/dashboard/package.json
+++ b/src/backend/web/web.admin/dashboard/package.json
@@ -11,46 +11,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.15",
-    "@angular/compiler": "^7.2.15",
-    "@angular/core": "^7.2.15",
-    "@angular/forms": "^7.2.15",
+    "@angular/animations": "^11.0.2",
+    "@angular/cdk": "^11.0.1",
+    "@angular/common": "^11.0.2",
+    "@angular/compiler": "^11.0.2",
+    "@angular/core": "^11.0.2",
+    "@angular/forms": "^11.0.2",
     "@angular/http": "^7.2.15",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/platform-browser-dynamic": "^7.2.15",
-    "@angular/router": "^7.2.15",
-    "@types/uuid": "^3.4.5",
-    "core-js": "^2.6.9",
-    "mat-progress-buttons": "^8.0.4",
-    "ngx-color-picker": "^8.0.1",
-    "oidc-client": "^1.9.1",
-    "rxjs": "^6.5.2",
-    "tslib": "^1.10.0",
-    "uuid": "^3.3.2",
-    "zone.js": "~0.8.29"
+    "@angular/material": "^11.0.1",
+    "@angular/platform-browser": "^11.0.2",
+    "@angular/platform-browser-dynamic": "^11.0.2",
+    "@angular/router": "^11.0.2",
+    "@types/uuid": "^8.3.0",
+    "core-js": "^3.8.0",
+    "mat-progress-buttons": "^9.1.1",
+    "ngx-color-picker": "^10.1.0",
+    "oidc-client": "^1.10.1",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.0.3",
+    "uuid": "^8.3.1",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.10",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "^7.2.15",
-    "@types/jasmine": "^2.8.16",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.0.5",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^6.0.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~3.2.4"
+    "@angular-devkit/build-angular": "^0.1100.2",
+    "@angular/cli": "^11.0.2",
+    "@angular/compiler-cli": "^11.0.2",
+    "@angular/language-service": "^11.0.2",
+    "@types/jasmine": "^3.6.2",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "~14.14.10",
+    "codelyzer": "~6.0.1",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~6.0.0",
+    "karma": "^5.2.3",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^7.0.0",
+    "ts-node": "~9.0.0",
+    "tslint": "~5.20.1",
+    "typescript": "^4.0.5"
   }
 }
