--- a/src/backend/web/web.admin/dashboard/Dockerfile
+++ b/src/backend/web/web.admin/dashboard/Dockerfile
@@ -1,6 +1,6 @@
 
 # Stage 1
-FROM node:8.11.2-alpine as builder
+FROM node:12.18.2-slim as builder
 WORKDIR /usr/src/app
 COPY package.json ./
 RUN yarn
@@ -8,7 +8,8 @@ COPY . ./
 RUN yarn build --prod --base-href=/dashboard/ --deploy-url=/dashboard/
 
 # Stage 2
-FROM nginx:alpine
+#  bitnami/nginx is offers non-root user
+FROM bitnami/nginx:1.19
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /usr/src/app/dist/dashboard /usr/share/nginx/html
 EXPOSE 80
