--- a/src/backend/web/web.admin/dashboard/package.json
+++ b/src/backend/web/web.admin/dashboard/package.json
@@ -51,6 +51,6 @@
     "protractor": "^7.0.0",
     "ts-node": "~9.0.0",
     "tslint": "~5.20.1",
-    "typescript": "^4.0.5"
+    "typescript": "~4.0.5"
   }
 }
