Test: changed target framework to .net core 3 (#74)
Co-authored-by: Bohirjon Akhmedov <bohir@silkroadprofessionals.com>

--- a/src/mobile/Tests/Restaurant.Core.UnitTests/Restaurant.Core.UnitTests.csproj
+++ b/src/mobile/Tests/Restaurant.Core.UnitTests/Restaurant.Core.UnitTests.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Exe</OutputType>
     <IsPackable>false</IsPackable>
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
     <AssemblyName>Restaurant.Core.UnitTests</AssemblyName>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
