--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -15,15 +15,19 @@ on:
     paths:
     - 'src/backend/services/basket.api/**'
     - '.github/workflows/basket-api.yml'
-  
-    types: [opened, synchronize, reopened]
+
+env:
+  SERVICE_NAME: basket.api
+  ARTIFACT_NAME: basket-api-artifact
+  IMAGE_NAME: jurabek/basket
 
 jobs:
-  build-and-test:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macOS-latest, ubuntu-latest]
+  build:
+    outputs:
+      new-version: ${{ steps.version.outputs.new-version }}
+      current-version:  ${{ steps.version.outputs.current-version }}
+
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
       with:
@@ -46,43 +50,60 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-
     
-    - name: Build & QA 
-      run: |
-        chmod -R +x scripts/
-        scripts/build.sh basket_api
-      working-directory: ./src/backend/
+    - name: "Bump Version"
+      if: github.ref == 'refs/heads/develop'
+      id: version
+      uses: ./.github/actions/bump-go-version
+      with:
+        service-name: ${{ env.SERVICE_NAME }}
     
-    - name: Test & QA
-      run: |
-        chmod -R +x scripts/
-        scripts/qa.sh basket_api
-      working-directory: ./src/backend/
-    
-    - name: Upload basket-api artifact
+    - name: "🚀 Build & Test"
+      uses: ./.github/actions/compile-go
+      with:
+        service-name: ${{ env.SERVICE_NAME }}
+
+    - name: "📦 Package go app"
+      if: github.ref == 'refs/heads/develop'
+      uses: ./.github/actions/package-go
+      with:
+        service-name: ${{ env.SERVICE_NAME }}
+        app-version: ${{ steps.version.outputs.new-version }}
+        commit-sha: ${{ github.sha }}
+
+    - name: "📤 Upload artifact"
+      if: github.ref == 'refs/heads/develop'
       uses: actions/upload-artifact@v1
       with:
-        name: basket_api
-        path: ./src/backend/services/basket.api/basket.api
-      if: matrix.os == 'ubuntu-latest'
+        name: ${{ env.ARTIFACT_NAME }}
+        path: ./src/backend/services/${{ env.SERVICE_NAME }}/${{ env.SERVICE_NAME }}
     
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@master
+    - name: "Commit bumped version"
+      if: github.ref == 'refs/heads/develop'
+      uses: ./.github/actions/git-commit
       with:
-        projectBaseDir: ./src/backend/services/basket.api
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.BASKET_API_SONAR_TOKEN }}
-      if: matrix.os == 'ubuntu-latest'
+        git-message: Bumped ${{ env.SERVICE_NAME }} version from  ${{ steps.version.outputs.current-version }} to ${{ steps.version.outputs.new-version }}
+        directory: ./services/${{ env.SERVICE_NAME }}
+        origin-branch: ${{ github.ref }}
+        
+    - name: "Push changes into master"
+      if: github.ref == 'refs/heads/develop'
+      uses: ./.github/actions/git-push
+      with:
+        origin-branch: ${{ github.ref }}
   
-  docker-push:
-    needs: build-and-test
+  release:
+    if: github.ref == 'refs/heads/develop'
+    outputs:
+      new-version: ${{ needs.build.outputs.new-version }}
+      current-version: ${{ needs.build.outputs.current-version }}
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - name: Download basket-api artifact
       uses: actions/download-artifact@v1
       with:
-        name: basket_api
+        name: ${{ env.ARTIFACT_NAME }}
     - name: Copy artifact to working directory
       shell: bash
       run: |
@@ -90,9 +111,43 @@ jobs:
     - name: Publish docker image
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        name: jurabek/basket
+        name: ${{ env.IMAGE_NAME }}
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         dockerfile: release.Dockerfile
         workdir: ./src/backend/services/basket.api
+        tags: ${{ needs.build.outputs.new-version }}
+
+  update-manifests:
+    if: github.ref == 'refs/heads/develop'
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout main repo
+        uses: actions/checkout@v2
+
+      - uses: imranismail/setup-kustomize@v1
+        with:
+          kustomize-version: "3.9.2"
+      
+      - name: Change manifests
+        env:
+          KUSTOMIZE_IMAGE_NAME: ${{ env.SERVICE_NAME }}
+          IMG: ${{ env.IMAGE_NAME }}:${{ needs.release.outputs.new-version }}
+        run: |
+          cd ./manifests/${{ env.SERVICE_NAME }}/base
+          kustomize edit set image $KUSTOMIZE_IMAGE_NAME=$IMG
+          cat kustomization.yaml
+
+      - name: Commit manifest deploy changes
+        uses: ./.github/actions/git-commit
+        with:
+          git-message: Deploying ${{ env.SERVICE_NAME }}:${{ needs.release.outputs.new-version }}  
+          directory: ./manifests/${{ env.SERVICE_NAME }}/base
+          origin-branch: develop
+
+      - name: "Push changes into master"
+        uses: ./.github/actions/git-push
+        with:
+          origin-branch: ${{ github.ref }}
 
