--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -82,7 +82,7 @@ jobs:
       uses: ./.github/actions/git-commit
       with:
         git-message: Bumped ${{ env.SERVICE_NAME }} version from  ${{ steps.version.outputs.current-version }} to ${{ steps.version.outputs.new-version }}
-        directory: ./services/${{ env.SERVICE_NAME }}
+        directory: ./src/backend/services/${{ env.SERVICE_NAME }}
         origin-branch: ${{ github.ref }}
         
     - name: "Push changes into master"
@@ -146,7 +146,7 @@ jobs:
           directory: ./manifests/${{ env.SERVICE_NAME }}/base
           origin-branch: develop
 
-      - name: "Push changes into master"
+      - name: "Push changes into develop"
         uses: ./.github/actions/git-push
         with:
           origin-branch: ${{ github.ref }}
