Added fluend + elastic + kibana setup using Docker Compose

--- a/src/backend/.gitlab-ci.yml
+++ b/src/backend/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+## Outdated 
+## Currently for CI used GithubActions checkout https://github.com/chayxana/Restaurant-App/tree/develop/.github
+
 
 image: docker:stable
 services:
