--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -38,10 +38,6 @@ jobs:
       with:
         go-version: 1.13.x
 
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: '0'
-
     - name: Setup cache
       uses: actions/cache@v1
       with:
@@ -53,20 +49,20 @@ jobs:
     - name: "Bump Version"
       if: github.ref == 'refs/heads/develop'
       id: version
-      uses: ./.github/actions/bump-go-version
+      uses: ./.github/actions/bump-version
       with:
-        service-name: ${{ env.SERVICE_NAME }}
+        service-name: ./src/backend/services/${{ env.SERVICE_NAME }}
     
     - name: "🚀 Build & Test"
       uses: ./.github/actions/compile-go
       with:
-        service-name: ${{ env.SERVICE_NAME }}
+        service-name: ./src/backend/services/${{ env.SERVICE_NAME }}
 
     - name: "📦 Package go app"
       if: github.ref == 'refs/heads/develop'
       uses: ./.github/actions/package-go
       with:
-        service-name: ${{ env.SERVICE_NAME }}
+        service-name: ./src/backend/services/${{ env.SERVICE_NAME }}
         app-version: ${{ steps.version.outputs.new-version }}
         commit-sha: ${{ github.sha }}
 
@@ -97,26 +93,31 @@ jobs:
       new-version: ${{ needs.build.outputs.new-version }}
       current-version: ${{ needs.build.outputs.current-version }}
     needs: build
+    
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    
     - name: Download basket-api artifact
       uses: actions/download-artifact@v1
       with:
         name: ${{ env.ARTIFACT_NAME }}
-    - name: Copy artifact to working directory
-      shell: bash
-      run: |
-        cp ${{ env.ARTIFACT_NAME }}/basket.api ./src/backend/services/basket.api/
-    - name: Publish docker image
-      uses: elgohr/Publish-Docker-Github-Action@master
+
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
       with:
-        name: ${{ env.IMAGE_NAME }}
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        dockerfile: release.Dockerfile
-        workdir: ./src/backend/services/basket.api
-        tags: ${{ needs.build.outputs.new-version }}
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build, tag, and push image to Docker Registry
+      uses: ./.github/actions/docker-release
+      with:
+        tag: ${{ needs.build.outputs.new-version }}
+        registry: ghcr.io/${{ github.repository }}
+        image: ${{ env.IMAGE_NAME }}
+        docker-file: ./src/backend/services/${{ env.SERVICE_NAME }}/release.Dockerfile
+        source-file: ${{ env.ARTIFACT_NAME }}/${{ env.SERVICE_NAME }}
 
   update-manifests:
     if: github.ref == 'refs/heads/develop'
