--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -19,7 +19,7 @@ on:
 env:
   SERVICE_NAME: basket.api
   ARTIFACT_NAME: basket-api-artifact
-  IMAGE_NAME: jurabek/basket
+  IMAGE_NAME: basket
 
 jobs:
   build:
