--- a/k8s-kustomize/infrastructure/namespaces.yaml
+++ b/k8s-kustomize/infrastructure/namespaces.yaml
@@ -1,6 +1,11 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: dev
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: staging
 ---
 apiVersion: v1
