--- a/.github/workflows/order-api.yml
+++ b/.github/workflows/order-api.yml
@@ -137,7 +137,7 @@ jobs:
           KUSTOMIZE_IMAGE_NAME: order-api
           IMG: ghcr.io/chayxana/${{ env.IMAGE_NAME }}:${{ needs.release.outputs.new-version }}
         run: |
-          cd ./manifests/services/${{ env.SERVICE_NAME }}/base
+          cd ./k8s-kustomize/services/${{ env.SERVICE_NAME }}/base
           kustomize edit set image $KUSTOMIZE_IMAGE_NAME=$IMG
           cat kustomization.yaml
 
@@ -145,7 +145,7 @@ jobs:
         uses: ./.github/actions/git-commit
         with:
           git-message: Deploying ${{ env.SERVICE_NAME }}:${{ needs.release.outputs.new-version }}  
-          directory: ./manifests/services/${{ env.SERVICE_NAME }}/base
+          directory: ./k8s-kustomize/services/${{ env.SERVICE_NAME }}/base
           origin-branch: develop
 
       - name: "Push changes into develop"
