Deploying order.api:1.0.6

--- a/k8s-kustomize/services/order.api/base/kustomization.yaml
+++ b/k8s-kustomize/services/order.api/base/kustomization.yaml
@@ -13,10 +13,11 @@ configMapGenerator:
   name: order-api
 
 secretGenerator:
-- name: order-api
-  envs: [".env.secret"]
+- envs:
+  - .env.secret
+  name: order-api
 
 images:
 - name: order-api
-  newName: ghcr.io/chayxana/order
-  newTag: 1.0.1
+  newName: ghcr.io/chayxana/order-api
+  newTag: 1.0.6
