--- a/k8s-kustomize/infrastructure/kustomization.yaml
+++ b/k8s-kustomize/infrastructure/kustomization.yaml
@@ -2,5 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespaces.yaml
-  - istio
-  - github.com/kubernetes-sigs/gateway-api/config/crd?ref=v0.4.3
+  - gateway-api-crds
+  - istio-operator-crds
+  - istio-profile
+  - gateway
