--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,4 @@ src/backend/services/basket.api/basket.api
 src/backend/.gradle
 src/backend/services/menu.api/menu-api-release
 src/backend/services/identity.api/identity-api-release
+src/backend/services/catalog-api/target
