changing ./gradlew into installed gradle

--- a/.github/actions/compile-gradle/action.yml
+++ b/.github/actions/compile-gradle/action.yml
@@ -11,6 +11,6 @@ runs:
   steps:
     - run: |
         cd ${{ inputs.service-name }}
-        ./gradlew clean
-        ./gradlew build
+        gradle clean
+        gradle build
       shell: bash
