fixing GH actions workflow

--- a/.github/actions/compile-gradle/action.yml
+++ b/.github/actions/compile-gradle/action.yml
@@ -11,6 +11,6 @@ runs:
   steps:
     - run: |
         cd ${{ inputs.service-name }}
-        gradle clean
-        gradle build
+        ./gradlew clean
+        ./gradlew build
       shell: bash
