--- a/.github/workflows/order-api.yml
+++ b/.github/workflows/order-api.yml
@@ -38,9 +38,6 @@ jobs:
         components: 'native-image'
         github-token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
-    
     - uses: actions/cache@v1
       with:
         path: ~/.gradle/caches
@@ -61,9 +58,9 @@ jobs:
       with:
         service-name: ./src/backend/services/${{ env.SERVICE_NAME }}
     
-    - name: "📦 Assemble gradle app"
+    - name: "📦 Build graalvm native"
       if: github.ref == 'refs/heads/develop'
-      uses: ./.github/actions/assemble-gradle
+      uses: ./.github/actions/build-graalvm-native
       with:
         service-name: ./src/backend/services/${{ env.SERVICE_NAME }}
         app-version: ${{ steps.version.outputs.new-version }}
