--- a/src/backend/services/order-api/gradle.properties
+++ b/src/backend/services/order-api/gradle.properties
@@ -3,3 +3,4 @@ quarkusPluginVersion=2.11.2.Final
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=2.11.2.Final
+version=1.0.0
